--- a/robotiq_driver/config/robotiq_controllers.yaml
+++ b/robotiq_driver/config/robotiq_controllers.yaml
@@ -7,6 +7,8 @@ controller_manager:
       type: position_controllers/GripperActionController
     robotiq_activation_controller:
       type: robotiq_controllers/RobotiqActivationController
+    gripper_forward_position_controller:
+      type: forward_command_controller/ForwardCommandController
 
 robotiq_gripper_controller:
   ros__parameters:
@@ -16,3 +18,9 @@ robotiq_gripper_controller:
 robotiq_activation_controller:
   ros__parameters:
     default: true
+
+gripper_forward_position_controller:
+  ros__parameters:
+    joints:
+      - robotiq_85_left_knuckle_joint
+    interface_name: position
